[gd_scene load_steps=11 format=2]

[ext_resource path="res://Prefabs/GUI/TopBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Scenes/PlayScene.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Levels/Level00.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/GUI/GamePlayPauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/GUI/PanelAttack.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/GUI/PanelProduction.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/GUI/PanelTroops.tscn" type="PackedScene" id=7]
[ext_resource path="res://Prefabs/GUI/PanelEndGame.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Audio/POL-green-town-short.wav" type="AudioStream" id=9]
[ext_resource path="res://Prefabs/GUI/PanelReports.tscn" type="PackedScene" id=10]

[node name="PlayScene" type="Node"]
script = ExtResource( 2 )

[node name="LevelContainer" type="Node2D" parent="."]

[node name="Level00" parent="LevelContainer" instance=ExtResource( 3 )]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TopBar" parent="HUD" instance=ExtResource( 1 )]

[node name="GamePlayPauseMenu" parent="HUD" instance=ExtResource( 4 )]
visible = false

[node name="PanelAttack" parent="HUD" instance=ExtResource( 5 )]
visible = false

[node name="PanelProduction" parent="HUD" instance=ExtResource( 6 )]
visible = false

[node name="PanelTroops" parent="HUD" instance=ExtResource( 7 )]
visible = false

[node name="PanelEndGame" parent="HUD" instance=ExtResource( 8 )]
visible = false

[node name="PanelReports" parent="HUD" instance=ExtResource( 10 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -8.0
autoplay = true
mix_target = 2
